# moodler-mcp

./: .env.example  .gitignore  .mcpbignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  manifest.json  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: build-mcpb.yml  ci.yml  pr-title.yml  release-please.yml
src/moodler_mcp/: __init__.py  __main__.py  auth.py  cache.py  client.py  config.py  moodle_api.py  scraper.py  server.py
src/moodler_mcp/tools/: assignments.py  cache.py  courses.py  grades.py  students.py
