[project]
name = "moodler-mcp"
version = "0.1.0"
description = "A Moodle MCP server for interacting with Moodle LMS via AI assistants"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Ghaith AlHallak", email = "hello@ghaithk.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "playwright>=1.58.0",
    "pymupdf>=1.27.2.2",
]

[project.urls]
Homepage = "https://github.com/GhaithAlHallak8/moodler-mcp"
Repository = "https://github.com/GhaithAlHallak8/moodler-mcp"
Issues = "https://github.com/GhaithAlHallak8/moodler-mcp/issues"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["moodler_mcp.scraper", "moodler_mcp.tools.grades"]
ignore_errors = true
