[project]
name = "moodler-mcp"
version = "0.5.0"
description = "A Moodle MCP server for interacting with Moodle LMS via AI assistants"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Ghaith AlHallak", email = "hello@ghaithk.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "playwright>=1.59.0",
    "pymupdf>=1.27.2.3",
    "pypandoc-binary>=1.13",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
]

[project.urls]
Homepage = "https://github.com/GhaithAlHallak8/moodler-mcp"
Repository = "https://github.com/GhaithAlHallak8/moodler-mcp"
Issues = "https://github.com/GhaithAlHallak8/moodler-mcp/issues"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "mypy>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["moodler_mcp.scraper", "moodler_mcp.tools.grades"]
ignore_errors = true
